--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,37 @@
 body{
-    background-color:rgb(115, 63, 63);
+background-image: linear-gradient(to left, #977dff,#f2e6ee);
 }
 header>h1{
     text-align: center;
     font-style: italic;
+    font-size: 50px;
+    color: #00033d;
 }
 
 .sectionBtn{
     display: flex;
     justify-content: center;
     gap: 30px;
+}
+.sectionBtn>button{
+      padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left:70px ;
+  padding-right:70px ;
+  
+  border-style: none;
+  border-radius: 10px;
+  background-image: linear-gradient(to right,#0600ab,#977dff);
+  font-size: 20px;
+  font-weight: bold;
+  font-style: italic;
+  color: white;
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.913);
+}
+.sectionBtn>button:hover{
+          background-image: linear-gradient(to left,#0600ab,#977dff);
+          box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.878);
+          color: black;
 }
 
 main{
@@ -20,11 +42,12 @@ main{
 
 }
 #mainContainer{
-        border: 1px solid black;
+        border: none;
+        border-radius: 10px;
     width: 700px;
     height: 300px;
     background-color: white;
-    box-shadow: 5px 5px 10px black;
+    box-shadow: 5px 5px 20px black;
     overflow: scroll;
     display: none;
 
@@ -39,59 +62,98 @@ aside{
 }
 #formContainer{
 display: none;
+
 }
 form{
     width: 600px;
     height: 300px;
-     border: 1px solid black;
+     border: none;
+     border-radius: 10px;
+     background-color:white;
+     box-shadow:  5px 5px 10px black;
     display: grid;
-    grid-template-columns: 300px 300px ;
-    grid-template-rows: 70px 70px 70px 70px;
+    grid-template-columns: 200px 200px 200px ;
+    grid-template-rows: 100px 100px 100px;
 }
 label{
     display: block;
 }
 form >div{
-    margin-left: 70px;
+    margin-left: 20px;
 }
 .one{
-    grid-column: 1;
+    grid-column: 1/2;
     grid-row: 2;
 }
 .two{
-    grid-column: 2;
+    grid-column: 3/4;
     grid-row: 2;
 }
-.three{
-    grid-row: 3;
-    grid-column:1 ;
-}
-.four{
-    grid-row: 3;
-    grid-column:2 ;
-}
-.five{
-    grid-row: 4;
-    grid-column:1 ;
-}
-.fiveLabel{
-    display: inline;
-}
-#submit{
-    grid-column: 2;
-    grid-row: 4;
-    width: 70px;
-    height: 30px;
-    margin-left: 70px;
-}
-#add{
 
-    margin-left: 20px;
-    width: 70px;
-    height: 30px;
+
+#submit{
+    grid-column: 2/3;
+    grid-row: 3;
+    width: 100px;
+    height: 50px;
+    margin-left: 50px;
+    border-radius: 10px;
+    border: none;
+background-image: linear-gradient(to left, #977dff,#f2e6ee);
+font-size: 15px;
+text-transform: uppercase;
+font-weight: bold;
+font-style: italic;
+    box-shadow: 7px 7px 10px black;
 }
+#submit:hover{
+    box-shadow: 7px 7px 10px #977dffc3;
+    background-image: linear-gradient(to right, #977dff,#f2e6ee);
+}
+
+
 legend{
-grid-column: 1/3;
+grid-column: 2/3;
 text-align: center;
 margin-top: 20px;
+font-weight: bold;
+font-style: italic;
+font-size: 20px;
+}
+.two>label{
+    font-size: 20px;
+    font-weight: bold;
+}
+.one>label{
+    font-size: 20px;
+    font-weight: bold;
+}
+#title{
+    border: none;
+    height: 30px;
+    width: 170px;
+    border-radius: 10px;
+  box-shadow: 5px 5px 10px black;
+
+}
+#title:focus{
+box-shadow: 5px 5px 10px black;
+}
+#details{
+    border: none;
+    height: 30px;
+    width: 170px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px black;
+}
+#details:focus{
+box-shadow: 5px 5px 10px black;
+}
+
+.p1{
+    font-size: 30px;
+    color: red;
+    font-weight: bolder;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
