--- a/src/styles.css
+++ b/src/styles.css
@@ -157,3 +157,26 @@ box-shadow: 5px 5px 10px black;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+.delBtn{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: none;
+    border-radius: 10px;
+    background-image: linear-gradient(to right, red, white);
+    box-shadow: 5px 5px 10px black ;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-left: 5px;
+}
+.delBtn:hover{
+     background-image: linear-gradient(to left, red, white);
+    box-shadow:inset 5px 5px 10px black ;
+}
+.itemList{
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px
+
+}
